--- a/css/timer.css
+++ b/css/timer.css
@@ -22,9 +22,9 @@ h1 {
 }
 
 canvas {
-  border-radius: 50%;
-  width: 300px;
-  height: 100px;
+  /*border-radius: 50%;*/
+  /*width: 300px;
+  height: 300px;*/
   border: 1px solid #d3d3d3;
 }
 
